<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/note"
        android:title="@string/action_search"
        android:orderInCategory="80"
        android:icon="@drawable/ic_note_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/refresh"
        android:title="@string/action_refresh"
        android:orderInCategory="70"
        app:showAsAction="never"/>
    <item
        android:id="@+id/collect"
        android:title="@string/action_collect"
        android:orderInCategory="80"
        app:showAsAction="never"
        android:checkable="true"/>
    <item
        android:id="@+id/copy_link"
        android:title="@string/copy_link"
        android:orderInCategory="90"
        app:showAsAction="never"/>
    <item
        android:id="@+id/open_link"
        android:title="@string/open_link"
        android:orderInCategory="100"
        app:showAsAction="never"/>

</menu>