<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:checked="true"
            android:icon="@mipmap/home"
            android:title="@string/action_home" />
        <item
            android:id="@+id/menu_classify"
            android:icon="@mipmap/classify"
            android:title="@string/action_read" />
        <item
            android:id="@+id/menu_collect"
            android:icon="@mipmap/classify"
            android:title="@string/action_collect" />


        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/wifi"
                    android:title="@string/app_name" />
            </group>

        </menu>

    </group>

</menu>